fear of race wounds (mainline, EOMA, LOTI, ANO)

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1699,7 +1699,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value=52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77
+                    value=52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1743,6 +1743,297 @@
                                 {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
+                    [/if]
+                [/case]
+                [case]
+                    value=73,74,75,76,77
+                    [if]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                ability=nfw_scared_of_race
+                            [/filter]
+                        [/have_location]
+                        [or]
+                            [variable]
+                                name=nfw_second_unit_type.id
+                                equals=$nfw_empty_var
+                            [/variable]
+                        [/or]
+                        [else]
+                            [if]
+                                {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals orc}
+                                {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals orc}
+                                [then]
+                                    {NFW_fear_of_orc_WOUND}
+                                    {VARIABLE rand_wound_selected yes}
+                                [/then]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals drake}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals drake}
+                                    [then]
+                                        {NFW_fear_of_drake_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals elf}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals elf}
+                                    [then]
+                                        {NFW_fear_of_elf_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals bat}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals bat}
+                                    [then]
+                                        {NFW_fear_of_bat_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals dwarf}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals dwarf}
+                                    [then]
+                                        {NFW_fear_of_dwarf_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals falcon}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals falcon}
+                                    [then]
+                                        {NFW_fear_of_falcon_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals goblin}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals goblin}
+                                    [then]
+                                        {NFW_fear_of_goblin_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals gryphon}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals gryphon}
+                                    [then]
+                                        {NFW_fear_of_gryphon_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals horse}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals horse}
+                                    [then]
+                                        {NFW_fear_of_horse_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals human}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals human}
+                                    [then]
+                                        {NFW_fear_of_human_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals dunefolk}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals dunefolk}
+                                    [then]
+                                        {NFW_fear_of_dunefolk_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals lizard}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals lizard}
+                                    [then]
+                                        {NFW_fear_of_lizard_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals mechanical}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals mechanical}
+                                    [then]
+                                        {NFW_fear_of_mechanical_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals merman}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals merman}
+                                    [then]
+                                        {NFW_fear_of_merman_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals monster}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals monster}
+                                    [then]
+                                        {NFW_fear_of_monster_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals naga}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals naga}
+                                    [then]
+                                        {NFW_fear_of_naga_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals ogre}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals ogre}
+                                    [then]
+                                        {NFW_fear_of_ogre_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals troll}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals troll}
+                                    [then]
+                                        {NFW_fear_of_troll_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals undead}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals undead}
+                                    [then]
+                                        {NFW_fear_of_undead_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals "black soul-loti"}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals "black soul-loti"}
+                                    [then]
+                                        {NFW_fear_of_undead_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals wolf}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals wolf}
+                                    [then]
+                                        {NFW_fear_of_wolf_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals wose}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals wose}
+                                    [then]
+                                        {NFW_fear_of_wose_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals eoma_tharis}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_tharis}
+                                    [then]
+                                        {NFW_fear_of_tharis_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals eoma_cyclops}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_cyclops}
+                                    [then]
+                                        {NFW_fear_of_cyclops_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals eoma_roc}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_roc}
+                                    [then]
+                                        {NFW_fear_of_roc_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals eoma_magical}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
+                                    [then]
+                                        {NFW_fear_of_magical_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals eoma_salamander}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_salamander}
+                                    [then]
+                                        {NFW_fear_of_salamander_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals eoma_summoner}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_summoner}
+                                    [then]
+                                        {NFW_fear_of_summoner_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals demon-loti}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals demon-loti}
+                                    [then]
+                                        {NFW_fear_of_demon_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals demon-loti-secret}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals demon-loti-secret}
+                                    [then]
+                                        {NFW_fear_of_demon_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals "demon lord-loti"}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals "demon lord-loti"}
+                                    [then]
+                                        {NFW_fear_of_demon_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals "undead demon-loti"}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals "undead demon-loti"}
+                                    [then]
+                                        {NFW_fear_of_demon_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals akladian}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals akladian}
+                                    [then]
+                                        {NFW_fear_of_akladian_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_second_unit_type.race equals quenoth}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals quenoth}
+                                    [then]
+                                        {NFW_fear_of_quenoth_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                            [/if]
+                        [/else]
                     [/if]
                 [/case]
                 [case]
@@ -1794,7 +2085,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value==93,94,95,96,97
+                    value=72,93,94,95,96,97
                     [if]
                         [have_location]
                             {EVENT_UNIT}
