--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -589,8 +589,7 @@
                 [filter]
                     {EVENT_SECOND_UNIT}
                 [/filter]
-                {CLEAR_VARIABLE scary_weapon}
-                {CLEAR_VARIABLE scary_weapon_translated}
+                {CLEAR_VARIABLE scary_weapon,scary_weapon_translated}
             [/modify_unit]
         [/case]
     [/switch]
@@ -650,8 +649,66 @@
                 [filter]
                     {EVENT_SECOND_UNIT}
                 [/filter]
-                {CLEAR_VARIABLE scary_type}
-                {CLEAR_VARIABLE scary_type_translated}
+                {CLEAR_VARIABLE scary_type,scary_type_translated}
+            [/modify_unit]
+        [/case]
+    [/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
+[/event]
+
+# fear of race
+[event]
+    name=last_breath
+    id=nfwme_fear_of_race_healing
+    first_time_only=no
+    [filter]
+        race=$second_unit.variables.scary_race
+    [/filter]
+    [filter_second]
+        ability=nfw_scared_of_race
+        [or]
+            [filter_wml]
+                [modifications]
+                    [object]
+                        id=fear_of_race
+                    [/object]
+                [/modifications]
+            [/filter_wml]
+        [/or]
+        [not]
+            id=$unit.id
+        [/not]
+    [/filter_second]
+    {VARIABLE_OP rand_heal_fear rand(1..100)}
+    [switch]
+        variable=rand_heal_fear
+        [case]
+            value=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
+            [remove_object]
+                {EVENT_SECOND_UNIT}
+                object_id=fear_of_race
+            [/remove_object]
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from fear of $second_unit.variables.scary_race_translated"
+                female_text=_"female^Recovered from fear of $second_unit.variables.scary_race_translated"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
+            [modify_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                {CLEAR_VARIABLE scary_race,scary_race_translated}
             [/modify_unit]
         [/case]
     [/switch]
