--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -216,8 +216,8 @@
 * <b><i>Capture</i></b> (increased recall cost based on level) > All units, random, 1% - 10% mechanical - 25% leaders and heroes
 * <b><i>Frostbite</i></b> (-40% cold resistance) > All units, wounded with ice attack or on a cold terrain, cumulative, 7% - 2% units with ice - 20% mechanical
 * <b><i>Gash</i></b> (-40% blade resistance) > All units, wounded with blade attack, cumulative, 4% - 20% mechanical
-* <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not unpoisonable, random, 1% - 30% on poisoned status
-* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random, 1% - 30% on slowed status
+* <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not unpoisonable, random, 1% - 20% on poisoned status
+* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random, 1% - 20% on slowed status
 * <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative, 2%
 * <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative, 1% - 5% with arcane attack
 * <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random, cumulative, 10% - 30% with impact or arcane attack
@@ -244,10 +244,11 @@
 * <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random, 2%
 * <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative, 1%
 * <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon, 3%
-* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy, 4%
+* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy, 3%
+* <b><i>Fear of race</i></b> (-50% strikes and -30% accuracy against any unit of the race that wound them) > Not mechanical, any race of enemy, 5%
 * <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive, 1%
 * <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative, 4% general - 2% agoraphobia - 0% aquaphobia on marine units in any water and lizards in swamps - 2% dendrophobia on elves and 0% on woses - 2% claustrophobia on dwarves, bats and trolls - 2% erimophobia on quenoth an dunefolk - 2% acrophobia on ogres, dwarves and trolls
-* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative, 4%
+* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative, 6%
 * <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability, 1%"
                     side_for=$side_number
                     image="misc/deoran-sad.webp"
@@ -266,6 +267,7 @@
 * <b><i>Fear of terrain</i></b>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
 * <b><i>Fear of weapon</i></b>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
 * <b><i>Fear of enemy</i></b>: 20% chance of recovery when defeating an opponent of same type the unit is scared of.
+* <b><i>Fear of race</i></b>: 15% chance of recovery when defeating an opponent of the race the unit is scared of.
 * <b><i>Fear of light/dark</i></b>: 5% chance of recovery when defeating an opponent during the day/night.
 * <b><i>Fear of fog</i></b>: 10% chance of recovery when defeating an opponent when fog is active.
 * <b><i>Cowardice</i></b>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
