Change death logic
Dead/plagued/consumed/infected units must be inside the variable to avoid id duplication until the victory event

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -135,23 +135,12 @@
                 find_in=nfw_wounded
             [/or]
             [or]
-                status=infected
-                [not]
-                    [filter_location]
-                        terrain=*^V*
-                    [/filter_location]
-                [/not]
-            [/or]
-            [or]
                 type=Lethalia_doppelganger,Efraim_doppelganger,TLU_DharmaRashti,TLU_HoRashti,TLU_True_Rashti,TLU_HoRashti
             [/or]
             [or]
                 ability=necromancy
                 [not]
-                    race=undead
-                [/not]
-                [not]
-                    race=black soul-loti
+                    race=undead,black soul-loti
                 [/not]
             [/or]
         [/not]
