--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -30,7 +30,6 @@
     {VARIABLE nfw_already_wound yes}
 [/event]
 
-#ifdef LOTI_1_OR_2
 [event]
     name=last_breath
     id=nfwm_infected
@@ -43,9 +42,9 @@
             [/filter_location]
         [/not]
     [/filter]
+    {NFW_infected_WOUND}
     {VARIABLE nfw_already_wound yes}
 [/event]
-#endif
 
 # souls catched by the Dimensional Gate
 [event]
