--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -41,6 +41,19 @@
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Consume" {NFW_COLOR_RED}}
 #enddef
 
+#define NFW_infected_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=nfw_plagued
+            male_name="<span color='#DA0000'>"+_"infected"+"</span>"
+            female_name="<span color='#DA0000'>"+_"female^infected"+"</span>"
+        [/trait]
+    [/modify_unit]
+
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Lost" {NFW_COLOR_RED}}
+#enddef
+
 #define NFW_destroyed_WOUND
     [modify_unit]
         {FILTER_EVENT_UNIT}
