--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -671,6 +671,10 @@ This does not apply to any unit that the objectives require you to keep alive. E
             [/if]
         [/do]
     [/foreach]
+    # kill already dead units
+    [kill]
+        trait=nfw_dead,nfw_plagued,nfw_consumed
+    [/kill]
     {CLEAR_VARIABLE nfw_wounded,nfw_alive_units}
 [/event]
 
