Healing menu portrait

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -262,6 +262,7 @@
             [command]
                 [message]
                     speaker=narrator
+                    image="misc/herbalist.webp"
                     message=_"<b>Wounds healing:</b>
 
 * <b><i>Fear of terrain</i></b>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
