Fear of type not granted to same unit type

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -2121,6 +2121,12 @@
                                 equals=$nfw_empty_var
                             [/variable]
                         [/or]
+                        [or]
+                            [variable]
+                                name=nfw_unit_type.id
+                                equals=$nfw_second_unit_type.id
+                            [/variable]
+                        [/or]
                         [else]
                             {NFW_fear_of_type_WOUND}
                             {VARIABLE rand_wound_selected yes}
