--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -244,8 +244,8 @@
 * <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random, 2%
 * <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative, 1%
 * <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon, 3%
-* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy, 3%
-* <b><i>Fear of race</i></b> (-50% strikes and -30% accuracy against any unit of the race that wound them) > Not mechanical, any race of enemy, 5%
+* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy other than own, 3%
+* <b><i>Fear of race</i></b> (-50% strikes and -30% accuracy against any unit of the race that wound them) > Not mechanical, any race of enemy other than own, 5%
 * <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive, 1%
 * <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative, 4% general - 2% agoraphobia - 0% aquaphobia on marine units in any water and lizards in swamps - 2% dendrophobia on elves and 0% on woses - 2% claustrophobia on dwarves, bats and trolls - 2% erimophobia on quenoth an dunefolk - 2% acrophobia on ogres, dwarves and trolls
 * <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative, 6%
