Better filter for aquatic units on broken leg

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1478,6 +1478,14 @@
                             [/have_location]
                         [/or]
                         [or]
+                            [have_location]
+                                {EVENT_UNIT}
+                                [filter]
+                                    formula="movement_cost(self, 'Gg') > max_moves and movement_cost(self, 'Wo') = 1"
+                                [/filter]
+                            [/have_location]
+                        [/or]
+                        [or]
                             {VARIABLE_CONDITIONAL nfw_unit_type.movement_type equals undeadspirit}
                         [/or]
                         [else]
