LOTI C4E12 Kill all wounded mass_produced units

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1054,6 +1054,23 @@
         image="misc/nfw-icon.png"
     [/message]
 [/event]
+# Units are killed in the victory event of the scenario, but it doesn't kill units on nfw_wounded, because it's right after. With this, all units of the undead army are eliminated.
+[event]
+    name=prestart
+    id=nfw_loti_mass_produced_2
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 13_The_Way_of_Assassins}
+    [/filter_condition]
+    [kill]
+        [filter_wml]
+            [variables]
+                mass_produced=yes
+            [/variables]
+        [/filter_wml]
+        animate=no
+        fire_event=no
+    [/kill]
+[/event]
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
