Recapture automatically recalled units

--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -1,7 +1,7 @@
 #memory loss TESTED
 [event]
     name=turn end
-    id=nfwme_amnesia
+    id=nfwm_amnesia
     first_time_only=no
     [modify_unit]
         [filter]
@@ -31,10 +31,26 @@
     [/modify_unit]
 [/event]
 
+#Recapture captured units that are recalled via events
+[event]
+    name=prestart,start
+    id=nfwm_captured
+    first_time_only=no
+    [modify_unit]
+        [filter]
+            ability=nfw_captured_unit_display
+            [not]
+                x,y=recall,recall
+            [/not]
+        [/filter]
+        x,y=recall,recall
+    [/modify_unit]
+[/event]
+
 #handles wounds with randomization
 [event]
     name=new turn
-    id=nfwme_random_status
+    id=nfwm_random_status
     first_time_only=no
     {VARIABLE_OP rand_status rand(1..10)}
 
@@ -94,7 +110,7 @@
 #removes the captured status once the unit is recalled
 [event]
     name=recall
-    id=nfwme_paid_ransom
+    id=nfwm_paid_ransom
     first_time_only=no
     [filter]
         {EVENT_UNIT}
@@ -109,7 +125,7 @@
 #removes advancements to level 2 ghosts
 [event]
     name=post_advance
-    id=nfwme_no_advancments
+    id=nfwm_no_advancments
     first_time_only=no
 
     [filter]
@@ -147,7 +163,7 @@
 #Heals poisoned poison elementals
 [event]
     name=attack_end
-    id=nfwe_heals_poison_elemental
+    id=nfw_heals_poison_elemental
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL second_unit.hitpoints greater_than 0}
@@ -188,7 +204,7 @@
 #Heals water elementals on water or cold terrains
 [event]
     name=attack_end
-    id=nfwe_heals_water_elemental
+    id=nfw_heals_water_elemental
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
@@ -274,7 +290,7 @@
 #Heals fire elementals on fire or lava terrains
 [event]
     name=attack_end
-    id=nfwe_heals_fire_elemental
+    id=nfw_heals_fire_elemental
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
@@ -360,7 +376,7 @@
 #Heals earth elementals on cave terrains
 [event]
     name=attack_end
-    id=nfwe_heals_earth_elemental
+    id=nfw_heals_earth_elemental
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
@@ -446,7 +462,7 @@
 #Heals arcane elementals on Ethereal abyss
 [event]
     name=attack_end
-    id=nfwe_heals_arcane_elemental
+    id=nfw_heals_arcane_elemental
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
@@ -532,7 +548,7 @@
 #Heals wind elementals on Windmills
 [event]
     name=attack_end
-    id=nfwe_heals_air_elemental
+    id=nfw_heals_air_elemental
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
