--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -31,7 +31,7 @@
     [/modify_unit]
 [/event]
 
-#Recapture captured units that are recalled via events
+# Recapture captured units that are recalled via events except real leaders and AI units.
 [event]
     name=prestart,start
     id=nfwm_captured
@@ -41,10 +41,73 @@
             ability=nfw_captured_unit_display
             [not]
                 x,y=recall,recall
+                [or]
+                    formula=leader
+                [/or]
+                [or]
+                    controller=ai
+                [/or]
             [/not]
         [/filter]
         x,y=recall,recall
     [/modify_unit]
+    [store_side]
+        variable=side_capture
+    [/store_side]
+    [foreach]
+        array=side_capture
+        [do]
+            [store_unit]
+                [filter]
+                    canrecruit=yes
+                    side=$this_item.side
+                [/filter]
+                variable=side_leader
+            [/store_unit]
+            [modify_unit]
+                [filter]
+                    ability=nfw_captured_unit_display
+                    side=$this_item.side
+                    formula=leader
+                    [not]
+                        id=$this_item.id
+                        [or]
+                            id=$this_item.save_id
+                        [/or]
+                        [or]
+                            id=$side_leader[0].id
+                        [/or]
+                        [or]
+                            controller=ai
+                        [/or]
+                    [/not]
+                [/filter]
+                x,y=recall,recall
+            [/modify_unit]
+        [/do]
+    [/foreach]
+    [remove_object]
+        ability=nfw_captured_unit_display
+        [not]
+            x,y=recall,recall
+        [/not]
+        object_id=captured_unit
+    [/remove_object]
+[/event]
+
+#removes the captured status once the unit is recalled
+[event]
+    name=recall
+    id=nfwm_paid_ransom
+    first_time_only=no
+    [filter]
+        {EVENT_UNIT}
+        ability=nfw_captured_unit_display
+    [/filter]
+    [remove_object]
+        {EVENT_UNIT}
+        object_id=captured_unit
+    [/remove_object]
 [/event]
 
 #handles wounds with randomization
@@ -105,21 +168,6 @@
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_status}
-[/event]
-
-#removes the captured status once the unit is recalled
-[event]
-    name=recall
-    id=nfwm_paid_ransom
-    first_time_only=no
-    [filter]
-        {EVENT_UNIT}
-        ability=nfw_captured_unit_display
-    [/filter]
-    [remove_object]
-        {EVENT_UNIT}
-        object_id=captured_unit
-    [/remove_object]
 [/event]
 
 #removes advancements to level 2 ghosts
