--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -319,9 +319,11 @@
     [modify_unit]
         [filter]
             {EVENT_UNIT}
+#ifver WESNOTH_VERSION < 1.17.16
             [filter_side]
                 controller=human
             [/filter_side]
+#endif
         [/filter]
         [object]
             id=captured_unit
